# TGF_and_glow_search_program

./: DataReaderFinal.py  DataReaderTimetrack1.py  README.md  TODO.md  autosearch.py  image_collector.py  make_docs.py  search.py  searchGUI.py  search_classes.py  search_module.py  setup.cfg
docs/: detector.html  longevent.html  reader.html  scintillator.html  shortevent.html  tools.html
src/: __init__.py  gui.py  parameters.py  search.py  tools.py
src/detectors/: croatia.py  detector.py  godot.py  santis.py  scintillator.py  thor.py
src/events/: longevent.py  shortevent.py
src/utilities/: auto_search.py  image_collector.py
tgf_search/: __init__.py  croatia.py  detector.py  godot.py  gui.py  longevent.py  parameters.py  santis.py  scintillator.py  search.py  shortevent.py  thor.py  tools.py
tgf_search/detectors/: croatia.py  detector.py  godot.py  santis.py  scintillator.py  thor.py
tgf_search/events/: longevent.py  shortevent.py
tgf_search/utilities/: auto_search.py  autosearch.py  image_collector.py
tgfsearch/: DataReaderTimetrack2.py  __init__.py  data_reader.py  data_reader_annotated.py  gui.py  parameters.py  search.py  tools.py
tgfsearch/config/: auto_search_config.json  detector_config.json  long_event_search_scints.json
tgfsearch/deployments/: BLOOP5_deployment_220831_230101.json  THOR5_deployment_240723_240822.json
tgfsearch/detectors/: adaptive_detector.py  croatia.py  detector.py  godot.py  santis.py  scintillator.py  thor.py
tgfsearch/events/: longevent.py  short_event.py  shortevent.py
tgfsearch/helpers/: communicator.py  long_event.py  pipestdout.py  reader.py  short_event.py  trace_info.py  traceinfo.py
tgfsearch/utilities/: DataReaderTimetrack2.py  auto_search.py  image_collector.py
