[metadata]
name = tgfsearch
version = 3.12.4

[options]
packages = 
	src
	src/deployments
	src/detectors
	src/events
	src/helpers
	src/utilities
python_requires = >=3.10
install_requires = 
	scipy
	numpy
	pandas
	matplotlib
	psutil
	selenium
	lxml


[options.entry_points]
console_scripts = 
	tgf-search = src.gui:main
	tgf-search-cl = src.search:main
	tgf-autosearch = src.utilities.auto_search:main
	tgf-collect = src.utilities.image_collector:main

[options.package_data]
deployments = *.json
	