[metadata]
name = tgfsearch
version = 3.16.7

[options]
packages = 
	tgfsearch
	tgfsearch/deployments
	tgfsearch/detectors
	tgfsearch/events
	tgfsearch/helpers
	tgfsearch/utilities
python_requires = >=3.10
install_requires = 
	scipy
	numpy
	pandas
	matplotlib
	psutil
	selenium
	lxml

[options.entry_points]
console_scripts =
    tgf-search = tgfsearch.gui:main
	tgf-search-cl = tgfsearch.search:main
	tgf-autosearch = tgfsearch.utilities.auto_search:main
	tgf-collect = tgfsearch.utilities.image_collector:main

[options.package_data]
tgfsearch = deployments/*.json
	